--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.basic_geo_quiz_app">
 
@@ -7,5 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+        <activity android:name=".StatsPage"></activity>
+        <activity android:name=".CreateAccount" />
+        <activity
+            android:name=".ui.login.QuizLoginActivity"
+            android:label="@string/title_activity_quiz_login" />
+        <activity android:name=".QuestionActivity" />
+        <activity android:name=".QuizStartActivity" />
+    </application>
+
 </manifest>
