--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StatsPage"></activity>
-        <activity android:name=".CreateAccount" />
+        <activity android:name=".StatsPageActivity"></activity>
+        <activity android:name=".CreateAccountActivity" />
         <activity
             android:name=".ui.login.QuizLoginActivity"
             android:label="@string/title_activity_quiz_login" />
